# Cpp-Examples

./: .gitignore  .travis-yml  .travis.yml  CMakeLists.txt  Doxyfile  README.md  STL_Containers_Iterators_1.md  clang-format.sh  codecov.yml
BBPTypeFormula/: BBPTypeFormula.cpp  BBPTypeFormula.h  CMakeLists.txt  main.cpp
CompositeSimpsonsRule/CompositeSimpsonsRule/: CompositeSimpsonsRule.cpp  CompositeSimpsonsRule.hpp  main.cpp
CompositeSimpsonsRule/CompositeSimpsonsRule.xcodeproj/: project.pbxproj
CubicSplineInterpolation/CubicSplineInterpolation/: cubicSplineInterpolation.cpp  cubicSplineInterpolation.hpp  main.cpp
CubicSplineInterpolation/CubicSplineInterpolation.xcodeproj/: project.pbxproj
EigenExamples/EigenExamples/: main.cpp
EigenExamples/EigenExamples.xcodeproj/: project.pbxproj
FixedPointIteration/FixedPointIteration/: FixedPointIteration.cpp  FixedPointIteration.hpp  main.cpp
FixedPointIteration/FixedPointIteration.xcodeproj/: project.pbxproj
GoldenSectionSearch/GoldenSectionSearch/: GoldenSectionSearch.cpp  GoldenSectionSearch.hpp  main.cpp
GoldenSectionSearch/GoldenSectionSearch.xcodeproj/: project.pbxproj
NumericalIntegration/NumericalIntegration/: NumericalIntegration.cpp  NumericalIntegration.hpp  main.cpp
NumericalIntegration/NumericalIntegration.xcodeproj/: project.pbxproj
RandomNumberGenerators/RandomNumberGenerators/: LCG.cpp  LCG.hpp  main.cpp
RandomNumberGenerators/RandomNumberGenerators.xcodeproj/: project.pbxproj
RungeKutta/RungeKutta/: RungeKutta.cpp  RungeKutta.hpp  main.cpp
RungeKutta/RungeKutta.xcodeproj/: project.pbxproj
build_scripts/: build.sh
build_scripts_ci/: build.sh
docs/: _numerical_integration_8cpp.html  _numerical_integration_8cpp.js  annotated.html  annotated_dup.js  bbp_type_formula_8cpp.html  bbp_type_formula_8h.html  bbp_type_formula_8h.js  bbp_type_formula_8h_source.html  binom_8cpp.html  binom_8cpp.js  binom_8h.html  binom_8h.js  binom_8h_source.html  brent_salamin_formula_8h.html  brent_salamin_formula_8h.js  brent_salamin_formula_8h_source.html  classes.html  devrandom_8h.html  devrandom_8h.js  devrandom_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_cac7b807d6b46cd49819c0e6d617cf50.html  dir_cac7b807d6b46cd49819c0e6d617cf50.js  discrete_fourier_transform_8cpp.html  discrete_fourier_transform_8cpp.js  discrete_fourier_transform_8h.html  discrete_fourier_transform_8h.js  discrete_fourier_transform_8h_source.html  dual_numbers_8cpp.html  dual_numbers_8cpp.js  dual_numbers_8h.html  dual_numbers_8h.js  dual_numbers_8h_source.html  files.html  fixed_point_iteration_8cpp.html  fixed_point_iteration_8cpp.js  fixed_point_iteration_8h.html  (+76 more)
docs/html/: annotated.html  annotated_dup.js  bbp_type_formula_8cpp.html  bbp_type_formula_8cpp.js  bbp_type_formula_8h.html  bbp_type_formula_8h.js  bbp_type_formula_8h_source.html  binom_8cpp.html  binom_8cpp.js  binom_8h.html  binom_8h.js  binom_8h_source.html  classes.html  devrandom_8h.html  devrandom_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  fixed_point_iteration_8cpp.html  fixed_point_iteration_8cpp.js  fixed_point_iteration_8h.html  fixed_point_iteration_8h.js  fixed_point_iteration_8h_source.html  functions.html  functions_vars.html  globals.html  globals_func.html  golden_section_search_8cpp.html  golden_section_search_8cpp.js  golden_section_search_8h.html  golden_section_search_8h.js  golden_section_search_8h_source.html  index.html  lcg_8cpp.html  lcg_8h.html  lcg_8h_source.html  menudata.js  metropolis_hastings_8cpp.html  metropolis_hastings_8cpp.js  metropolis_hastings_8h_source.html  (+14 more)
docs/latex/: annotated.tex  bbp_type_formula_8cpp.tex  (+30 more)
lib/: numericCppExamples.hpp
polyroot/: .travis.yml
src/: BBPTypeFormula.cpp  BBPTypeFormula.h  FixedPointIteration.cpp  GoldenSectionSearch.cpp  GoldenSectionSearch.h  LCG.cpp  LCG.h  NumericalIntegration.cpp  RungeKutta.cpp  RungeKutta.h  bbpTypeFormula.cpp  bbpTypeFormula.h  binom.cpp  binom.h  brentSalaminFormula.h  cubicSplineInterpolation.cpp  cubicSplineInterpolation.h  devrandom.h  discreteFourierTransform.cpp  discreteFourierTransform.h  dualNumbers.cpp  dualNumbers.h  finiteDifferences.cpp  finiteDifferences.h  fixedPointIteration.cpp  fixedPointIteration.h  goldenSectionSearch.cpp  goldenSectionSearch.h  integerFactorization.h  knapsack.cpp  knapsack.h  lagrangeInterpolation.cpp  lagrangeInterpolation.h  lcg.cpp  lcg.h  metropolisHastings.cpp  metropolisHastings.h  numericalIntegration.cpp  numericalIntegration.h  polyroot.cpp  (+7 more)
tests/: testmain.cpp
(+183 files in other folders)
